--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,6 @@ addons:
   apt:
     packages:
     - libunwind8
-env:
-  global:
-  - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  - DOTNET_CLI_TELEMETRY_OPTOUT: 1
 mono: none
 os:
 - linux
@@ -26,6 +22,6 @@ before_install:
   /usr/local/opt/openssl/lib/libcrypto.1.0.0.dylib /usr/local/lib/; ln -s /usr/local/opt/openssl/lib/libssl.1.0.0.dylib
   /usr/local/lib/; fi
 script:
-- ./build.sh
+- ./build.sh --ci
 - if test "$TRAVIS_OS_NAME" != "osx"; then bash test/SystemdActivation/docker.sh;
   fi
