Fix #1575 by removing use of Map (#1671)

--- a/client-ts/tsconfig-base.json
+++ b/client-ts/tsconfig-base.json
@@ -13,6 +13,6 @@
         "noImplicitAny": true,
         "suppressImplicitAnyIndexErrors": true,
         "noEmitOnError": true,
-        "lib": [ "es2016", "dom" ]
+        "lib": [ "es5", "es2015.promise", "es2015.iterable", "dom" ]
     }
 }
