Update application parts implementation

--- a/src/Microsoft.AspNetCore.Authentication.AzureADB2C.UI/Microsoft.AspNetCore.Authentication.AzureADB2C.UI.csproj
+++ b/src/Microsoft.AspNetCore.Authentication.AzureADB2C.UI/Microsoft.AspNetCore.Authentication.AzureADB2C.UI.csproj
@@ -1,7 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Razor">
 
-  <Import Project="$(MSBuildThisFileDirectory)Microsoft.AspNetCore.Authentication.AzureADB2C.UI.props" />
-
   <PropertyGroup>
     <Description>ASP.NET Core Azure Active Directory B2C Integration provides components for easily integrating Azure Active Directory B2C authentication within your ASP.NET Core application.</Description>
     <PrecompiledDescription>Precompiled views assembly for the ASP.NET Core Azure Active Directory B2C Integration package.</PrecompiledDescription>
@@ -11,6 +9,7 @@
     <PrecompiledAssemblyTitle Condition=" '$(PrecompiledAssemblyTitle)' == '' ">$(RazorTargetName).dll</PrecompiledAssemblyTitle>
     <PreserveCompilationContext>false</PreserveCompilationContext>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <ProvideApplicationPartFactoryAttributeTypeName>Microsoft.AspNetCore.Authentication.AzureADB2C.UI.AzureAdB2CViewsPartFactory, Microsoft.AspNetCore.Authentication.AzureADB2C.UI.Views</ProvideApplicationPartFactoryAttributeTypeName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,26 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
-      <_parameter1>Microsoft.AspNetCore.Mvc.AdditionalReference</_parameter1>
-      <_parameter2>$(RazorTargetName).dll,false</_parameter2>
-    </AssemblyAttribute>
+    <RazorCompile Include="AzureAdB2CViewsPartFactory.cs" />
+    <Compile Remove="AzureAdB2CViewsPartFactory.cs" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="Areas\AzureADB2C\Pages\_ViewStart.cshtml">
-      <Pack>$(IncludeRazorContentInPack)</Pack>
-    </Content>
-  </ItemGroup>
-  
-  <Target Name="VerifyBuildOutputs" AfterTargets="Build">
-    <PropertyGroup>
-      <ExpectedOutputFile>$(OutputPath)$(RazorTargetName).dll</ExpectedOutputFile>
-    </PropertyGroup>
-
-    <Error Text="Unable to find precompiled view file $(ExpectedOutputFile)" Condition="!Exists('$(ExpectedOutputFile)')" />
-  </Target>    
-
-  <Import Project="$(MSBuildThisFileDirectory)Microsoft.AspNetCore.Authentication.AzureADB2C.UI.targets" />
   
 </Project>
