Build runtime specific metapackages

--- a/src/Microsoft.AspNetCore.App/Microsoft.AspNetCore.App.csproj
+++ b/src/Microsoft.AspNetCore.App/Microsoft.AspNetCore.App.csproj
@@ -15,6 +15,7 @@
     <Content Include="build\$(TargetFramework)\*.props" PackagePath="%(Identity)" />
     <Content Include="build\$(TargetFramework)\*.targets" PackagePath="%(Identity)" />
     <Content Include="lib\$(TargetFramework)\_._" PackagePath="%(Identity)" />
+    <Content Include="runtime.json" PackagePath="%(Identity)" />
   </ItemGroup>
 
 </Project>
