Fix path to staged files

--- a/src/CodeSign/CodeSign.csproj
+++ b/src/CodeSign/CodeSign.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net462</TargetFramework>
     <IsPackable>false</IsPackable>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
