Backport: consolidate list of myget feeds to one place and remove the need to mirror packages

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,4 +1,5 @@
 <Project>
   <Import Project="..\version.props" />
   <Import Project="..\build\common.props" />
+  <Import Project="..\build\sources.props" />
 </Project>
