--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
   <Import Project="..\version.props" />
   <Import Project="..\build\common.props" />
+  <Import Project="..\build\dependencies.props" />
   <Import Project="..\build\sources.props" />
 </Project>
