Add the 2.0.6 manifest to Microsoft.AspNetCore.All

--- a/src/Microsoft.AspNetCore.All/Microsoft.AspNetCore.All.csproj
+++ b/src/Microsoft.AspNetCore.All/Microsoft.AspNetCore.All.csproj
@@ -19,4 +19,6 @@
     <Content Include="lib\$(TargetFramework)\_._" PackagePath="%(Identity)" />
   </ItemGroup>
 
+  <Import Project="EnsureManifestExists.targets" />
+
 </Project>
